# OOP-labs

Lab1/: CMakeLists.txt  dialogwork1.cpp  dialogwork1.h  dialogwork1.ui  dialogwork2.cpp  dialogwork2.h  dialogwork2.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  nextdialogwork1.cpp  nextdialogwork1.h  nextdialogwork1.ui
